--- a/global-constraints.tex
+++ b/global-constraints.tex
@@ -782,10 +782,12 @@
     \only<18-20> {
         \begin{columns}
             \begin{column}{0.45\textwidth}
+                Using not-equals:
                 \lstinputlisting[basicstyle=\scriptsize\ttfamily]{code/hardest-neq.txt}
             \end{column}
             \begin{column}{0.45\textwidth}
                 \only<19->{
+                    Using all-different:
                     \lstinputlisting[basicstyle=\scriptsize\ttfamily]{code/hardest-alldiff.txt}
                 }
             \end{column}
